# clinical-knowledge-graph

./: .gitignore  README.md  adapter.py  biocypher_config.yaml  create_subgraph.py  preprocess.py  pyproject.toml  read_from_graph.py  script.py  speed_test.py  speed_test_script.py  stats.py
ckg_dump/: README.md  ckg_latest.md5  ckg_latest.urls  ckg_latest.urls.2  docker-compose.yml  download.py
ckg_dump/neo4j/backups/: neo4j-init.sh
ckgb/: adapter.py
config/: biocypher_config.yaml  biocypher_config_embedding.yaml  biocypher_config_full.yaml  biocypher_config_subset.yaml  embedding_schema_config.yaml  full_schema_config.yaml  schema_config.yaml  subset_schema_config.yaml
data/: all_nodes.csv  embedding_nodes.csv  embedding_relationships.csv  granular_relationships.csv  subset_nodes.csv  subset_relationships.csv
other/: create_list_bqe.py  speed_test_script.py
scripts/: embedding_ckg_script.py  full_ckg_script.py  subset_ckg_script.py
