[tool.poetry]
name = "ckg"
version = "0.1.0"
description = "CKG migration to BioCypher"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
biocypher = { git = "https://github.com/saezlab/BioCypher.git", branch = "main" }
# biocypher = {path = "../BioCypher", develop = true}
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
