[tool.poetry]
name = "ckg"
version = "0.1.0"
description = "CKG migration to BioCypher"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
biocypher = { git = "https://github.com/saezlab/BioCypher.git", branch = "modularise" }
# biocypher = {path = "../BioCypher", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
