[tool.poetry]
name = "ckg"
version = "0.2.0"
description = "CKG migration to BioCypher"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
biocypher = "^0.5.38"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
